test/types/records/recursive/concrete-tuple.good
concrete-tuple.chpl:2: error: record 'R' cannot contain a recursive field 'x' of type '3*R'
